--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT = 3003
 DB_CONNECTION = mongodb+srv://renofebrieriksandi2226250098:Reno13@cluster0.j9j1px5.mongodb.net/if2cdb?retryWrites=true&w=majority
+SECRET_KEY=informatika
